Aggiungo cambio id temporaneo facebook e inizio a mettere la textfield quando premo modifica prezzo

--- a/polibooks/templates/addbook.htm
+++ b/polibooks/templates/addbook.htm
@@ -29,5 +29,5 @@
 </div>
 <div id="divLoadingBar" style="display: none;">
 	<b>Loading..</b><br />
-	<img src="/img/loading1.gif" />
+	<img src="/polibooks/img/loading1.gif" />
 </div>
