--- a/polibooks/templates/managebooks.htm
+++ b/polibooks/templates/managebooks.htm
@@ -1,6 +1,6 @@
 <div class="panel panel-success">
 <div class="panel-heading">Libri pubblicati</div>
-<table class="table table-striped">
+<table id="manageBooksTable" class="table table-striped">
 		<tr>
             <th>Titolo</th>
             <th>Autore</th>
