--- a/polibooks/templates/mustlogin.htm
+++ b/polibooks/templates/mustlogin.htm
@@ -1,4 +1,4 @@
 <div align="center">
 Per continuare devi esserti autenticato!<br />
-Clicca <a href="auth.php">qui</a> per effettuare il login con Facebook!<br />
+Clicca <a href="/polibooks/auth.php">qui</a> per effettuare il login con Facebook!<br />
 </div>
