Modifiche managebooks.php

--- a/polibooks/templates/managebooks.htm
+++ b/polibooks/templates/managebooks.htm
@@ -1,5 +1,6 @@
 <div class="panel panel-success">
 <div class="panel-heading">Libri pubblicati</div>
+<form action="/polibooks/managebooks.php">
 <table id="manageBooksTable" class="table table-striped">
 		<tr>
             <th>Titolo</th>
@@ -13,4 +14,5 @@
         </tr>
 {ROWS}
 </table>
+</form>
 </div>
